static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Chivo:wght@400;700;900&family=Heebo:wght@700&family=Istok+Web:wght@400;700&family=Montserrat:wght@600;700;800;900&display=swap');

/* Global styles */

html,body {
    font-size: 62.5%;
    min-height: 100vh;
}

a {
    text-decoration: none;
}

p {
    font-family: Istok Web, sans-serif;
}

.btn-lg {
    font-size: 2rem;
    background-color: #D3B04D;
    color: #000000;
    border: 2px solid #D3B04D;
}

.subheading {
    font-family: Montserrat, sans-serif;
    font-weight: 700;
}

/* Custom Backgrounds */

.bg-b {
    background-color: #002043;
}

/* Overwrites bootstrap hover colors for button */
.btn-lg:hover {
    background-color: transparent;
    color: #D3B04D;
    border: 2px solid #D3B04D;
}

/* Custom navbar styles for index */

header {
    height: 75%;
}

#homeNav a,
#blackNav a {
    font-family: Chivo;
    font-weight: 900;
    font-size: 2rem;
    padding: 0;
    margin: 0 15px 0 0;
    z-index: 1;
}

#homeNav a {
    color: white;
}

.social-media i {
    margin-left: 15px;
    font-size: 3rem;
}

.nav-item>a,
.social-media i  {
    border-bottom: 3px solid transparent;
}

.nav-item>a:hover,
.social-media i:hover {
    transition: all ease 0.2s;
    border-bottom: 3px solid #D3B04D;
}

/* Custom styles for burger menu */
#homeNav .navbar-toggler-icon {
    background-image: url("data:image/svg+xml;charset=utf8, %3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(255, 254, 254)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
    width: 50px;
    height: 50px;
}

#homeNav .navbar-toggler {
    border: 5px solid white;
}

.custom-toggler .navbar-toggler-icon {
    background-image: url("data:image/svg+xml;charset=utf8, %3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(0, 0, 0)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
    width: 50px;
    height: 50px;
}

#blackNav .navbar-toggler {
    border: none;
}

/* Custom navstyles for all other templates */

#blackNav a {
    color: black;
}

#blackNav h1 {
    border-bottom: 3px solid #D3B04D;
}

/* Hero image and overlay */
#hero-image {
    background: url("https://res.cloudinary.com/dn8zjehza/image/upload/v1665831151/George%20Orwell%20Pub/hero-img_vxz8ul.jpg") center;
    background-size: cover;
    z-index: -1;
}

#hero-overlay {
    background-color: rgba(77, 77, 77, 0.6);
}

h1 {
    font-family: Chivo, sans-serif;
    color: white;
    font-weight: 900;
}

h2 {
    font-family: Chivo, sans-serif;
    color: white;
}

.golden-line {
    display: inline-block;
    border-bottom: #D3B04D solid 5px;
    width: 15%;
}

.logo {
    width: 150px;
    height: 150px;
    background-image: url("https://res.cloudinary.com/dn8zjehza/image/upload/v1665831151/George%20Orwell%20Pub/logo_neaeuz.png");
    background-size: cover;
    border-radius: 50%;
}

.logo-sm {
    width: 75px;
    height: 75px;
    background-image: url("https://res.cloudinary.com/dn8zjehza/image/upload/v1665831151/George%20Orwell%20Pub/logo_neaeuz.png");
    background-size: cover;
    border-radius: 50%;
}

/* About us panel */

#about-panel {
    background-color: #7A8450;
}

#about-text {
    padding: 10% 0;
}

#about-picture {
    background: #ffffff url("https://res.cloudinary.com/dn8zjehza/image/upload/v1665831619/George%20Orwell%20Pub/about-image_djdvfd.jpg") no-repeat center;
    background-size: cover;
}

/* Our offer card panel */

.card-img {
    height: 200px;
    background-color: #ffffff;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.card-body>h5 {
    font-family: Heebo, sans-serif;
    font-weight: 700;
}

/* Carousel events */

.carousel-item {
    height: 600px;
    background: #7A8450 url("https://res.cloudinary.com/dn8zjehza/image/upload/v1665831151/George%20Orwell%20Pub/blind_vqlvfo.jpg") no-repeat center;
    background-size: cover;
}

#event-carousel {
    border-radius: 10px;
    background-color: rgba(97, 97, 97, 0.75);
}

#event-carousel > h2,
#event-carousel > p {
    font-family: Heebo, sans-serif!important;
    font-weight: Bold;
}

/* Footer */

footer {
    height: 10vh;
    background-color: #000000;
}

/* Custom form styles for allauth templates */
.form-container {
    min-height: 90vh;
    padding: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #F0F0F0;
}

.user-form {
    width: 40%;
    margin: 10vh auto 0;
    border: 1px solid grey;
    border-radius: 25px;
    overflow: hidden;
    background-color: white;
}

.form-header {
    width: 100%;
    padding: 25px;
    background-color: #002043;
}

.form-header > h2 {
    font-family: Montserrat;
    font-weight: 700;
    border-bottom: 2px solid #D3B04D;
}

.user-form label {
    font-size: 2rem;
    font-family: Montserrat, sans-serif;
    font-weight: 700;
    border-bottom: 2px solid #D3B04D;
    padding-right: 20px;
    margin-bottom: 10px;
}

.user-form button {
    font-size: 2rem;
    background-color: #D3B04D;
    border: 2px solid #D3B04D;
    border-radius: 5px;
    margin-top: 10px;
    padding: 0 10px;
}

.user-form label, 
.user-form input,
.user-form button {
    display: block;
}

.user-form input,
.user-form textarea {
    width: 100%;
    padding: 7.5px;
    border: none;
    border-radius: 5px;
    font-size: 2rem;
    font-family: Istok web, sans-serif;
    background-color:rgb(232, 240, 254);
}

.errorlist {
    color: red;
    font-family: Montserrat, sans-serif;
    font-weight: 700;
    list-style-type: square;
    font-size: 1.5rem;
}

#id_remember {
    width: 15px;
    height: 15px;
    padding: 0;
    margin: 0;
    vertical-align: bottom;
    position: relative;
    top: -1px;
}

a[class="button secondaryAction"],
a[href="/accounts/password/reset/"] {
    font-size: 1.8rem;
}

/* Accordion in events schedule */
.events-section {
    min-height: 100vh;
    padding-top: 15vh;
    background-color: #F0F0F0;
}

.event {
    width: 60%;
    margin-top: 20px;
    border-radius: 10px;
    overflow: hidden;
}

.event-title {
    font-weight: 700;
    border-bottom: 3px solid #D3B04D;
}

.event-date {
    width: 25%;
    font-family: Montserrat;
    background-color: #002043;
}

.card-text > * {
    font-size: 2-rem!important;
}

.event-address {
    font-family: Montserrat, sans-serif;
    font-weight: 600;
    color: #454242;
}

.schedule-icons > * {
    font-family: Montserrat, sans-serif;
    font-weight: 700;
}

/* Account page */
.account-section {
    margin-top: 15vh;
}

.bookings-titles {
    font-family: Montserrat, sans-serif;
    border-radius: 10px 10px 0 0;
    color: white;
    background-color: #002043;
}

.bookings {
   padding: 10px 0;
   border-bottom: #F0F0F0 1px solid;
}

.bookings h5 {
    font-family: Istok Web, sans-serif;
    font-size: 1.5rem;
    padding-left: 10px;
}

/* Sorting tables */

.data-table {
    font-size: 1.5rem;
}

.data-table th {
    background-color: #002043;
    color: white;
}

#booking-table_filter input,
#booking-table_length select,
#user-table_filter input,
#user-table_length select {
    height: 25px;
}

#booking-table_filter label,
#booking-table_length label, 
#booking-table_info,
#booking-table_paginate li
#user-table_filter label,
#user-table_length label, 
#user-table_info,
#user-table_paginate li {
    font-size: 1.5rem;
}

/* User feedback pages */

.user-feedback-card {
    border-radius: 20px;
    overflow: hidden;
}

/* Admin messages */
#v-pills-tab > button {
    color: black;
}

/* Overwrites bootstrap FS text size classes */
.fs-1 {
    font-size: 6rem !important;
}

.fs-2 {
    font-size: 5rem !important;
}

.fs-3 {
    font-size: 4rem !important;
}

.fs-4 {
    font-size: 3rem !important;
}

.fs-5 {
    font-size: 2rem !important;
}

.fs-6 {
    font-size: 1rem !important;
}

/* Breakpoints */

/* XX-Large devices (larger desktops, 1400px and up) */
@media screen and (max-width: 1400px) {
    #about-text {
        width: 75% !important;
    }
    
    .event-date {
        width: 40%;
    }

    .event h3 {
        padding-left: 0!important;
    }
}

/* X-Large devices (large desktops, 1200px and up) */
@media screen and (max-width: 1200px) {
    #homeNav a {
        margin: 0;
    }
    
}

/* Large devices (desktops, 992px and up) */
@media screen and (max-width: 992px) {
    #about-picture {
        display: none;
    }

    #about-text {
        width: 50% !important;
    }

    .event {
        width: 75%;
        text-align: start;
    }
    

}

/* Medium devices (tablets, 768px and up) */
@media screen and (max-width: 768px) {
    #about-text {
        width: 60% !important;
        padding: 25px 0;
    }

    #event-carousel {
        width: 75%!important;
        height: 75%!important;
    }

    /* Events */
    .event {
        width: 75%;
        text-align: center;
    }

    .small-date {
        background-color: #002043;
        color: #ffffff;
        padding: 5px;
        border-radius: 5px;
    }

    .fa-chevron-up {
        transition: all 0.3s ease;
    }

    .card[aria-expanded="false"] .fa-chevron-up {
        transform: rotate(180deg);
    }

    .schedule-icons {
        width: 100%!important;
        padding: 0 10%;
    }
}

/* Small devices (landscape phones, 576px and up) */
@media screen and (max-width: 576px) {

    a[href="#about-text"] {
        display: none;
    }

    #about-text {
        width: 80%!important;
    }

    .cards-section > .row:first-child,
    #cards-section > div:first-child {
        width: 100%!important;
    }

    #cards-section > div:first-child > span {
        width: 100%!important;
    }

    #event-carousel {
        width: 100%!important;
        height: 100%!important;
    }


    /* Events */

    .event {
        width: 90%;
        text-align: center;
    }

}

